Bug 1451439 - Snap scroll offset to pixel boundaries before passing to WebRender. r=botond

When scrolling very slowly, sometimes some things can jump up and down, causing
flickering. This is because the scroll offset that the APZC passes to WebRender
isn't snapped to pixel boundaries; things drawn relative to that can move up or
down depending on how their boundaries round.

So round the scroll offset to device pixel boundaries before passing it to
WebRender. This eliminates the flicker in cases I've been able to reproduce.

Differential Revision: https://phabricator.services.mozilla.com/D6856